Replace generic RuntimeException in Router with dedicated exception classes